Placed Spinning Wheel items in folder for clarity

--- a/Spinning Wheel Demo/Index.html
+++ b/Spinning Wheel Demo/Index.html
@@ -9,12 +9,12 @@
 </head>
 <body style="background-color: black;">
     <div id="Parent">
-        <img id="Outer-Wheel" src="Images/Outside Wheel.png">
-        <img id="Inner-Wheel" class="spin" src="Images/Inside Spinning Wheel.png">
+        <img id="Outer-Wheel" src="../Images/Outside Wheel.png">
+        <img id="Inner-Wheel" class="spin" src="../Images/Inside Spinning Wheel.png">
     </div>
 
     <div id="About-Section">
-        <img id="AboutMe-Icon" class="About-Image" src="images/AboutMeIcon.png">
+        <img id="AboutMe-Icon" class="About-Image" src="../images/AboutMeIcon.png">
         <div id="About-Text">
             <h1><b>About Me</b></h1>
             <p>Name: Matthew Stowe</p>
