added boid drawing and movement

--- a/Main/Index.html
+++ b/Main/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+
     <header>
         <div id="#" class="Header-Item">Home</div>
         <div id="#" class="Header-Item">About</div>
@@ -52,5 +53,7 @@
     </div>
 
     <script src="ChangeDiv.js"></script>
+    <!-- <script src="CanvasControl.js"></script>
+    <script src="Vector.js"></script> -->
 </body>
 </html>
