added boids as background

--- a/Main/Index.html
+++ b/Main/Index.html
@@ -18,7 +18,8 @@
         <div id="#" class="Header-Item">Contact</div>  
     </header>
 
-    <!-- Center Piece -->
+    <canvas id="Background"></canvas>
+
     <div>
         <div class="Center-Title">
             <img id="Center-Image" src="../Images/CenterTitle.png" alt="Matthew Stowe Front End Dev">
@@ -53,7 +54,8 @@
     </div>
 
     <script src="ChangeDiv.js"></script>
-    <!-- <script src="CanvasControl.js"></script>
-    <script src="Vector.js"></script> -->
+    <script src="Vector.js"></script>
+    <script src="Shapes.js"></script>
+    <script src="CanvasControl.js"></script>
 </body>
 </html>
